--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,18 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext.kotlin_version = '1.8.10' // 필요에 따라 수정할 Kotlin 버전
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath("com.android.tools.build:gradle:8.1.0") // Android Gradle Plugin 버전
+        classpath("com.google.gms:google-services:4.4.2") // Google Services Plugin 추가
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
 allprojects {
     repositories {
         google()
